services section end

--- a/app/input.css
+++ b/app/input.css
@@ -76,3 +76,10 @@
 .ltr{
   direction: ltr !important;
 }
+.hide-scrollbar {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
+.hide-scrollbar::-webkit-scrollbar {
+  display: none;
+}
